build(pom): add javafx-maven-plugin for easier execution
- Clarify JavaFX setup and running instructions